# project-5-drift-triage

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agent/: Dockerfile  README.md  pyproject.toml
agent/app/: main.py
agent/app/agents/: __init__.py  graph.py  prompt_loader.py  routing.py  state.py  supervisor.py
agent/app/api/: __init__.py  approvals.py  health.py  investigations.py  queue.py  webhooks.py
agent/app/contracts/: __init__.py  drift_webhook.py  promotion.py
agent/app/core/: config.py  db.py  deps.py  errors.py
agent/app/repositories/: __init__.py  agent_message_repository.py  approval_repository.py  drift_event_repository.py  investigation_repository.py  job_repository.py
agent/app/schemas/: __init__.py  agent_result.py  approval.py  drift_event.py  health.py  investigation.py  queue.py
agent/app/services/: __init__.py  approval_service.py  checkpoint_service.py  dashboard_event_service.py  investigation_service.py  model_service_client.py  queue_service.py  webhook_service.py
dashboard/: Dockerfile  README.md  dashboard.py  pyproject.toml
dashboard/.streamlit/: config.toml
dashboard/ui/: __init__.py  api.py  components.py  config.py  styles.py
dashboard/ui/pages/: __init__.py  demo_controls.py  drift_monitor.py  human_approvals.py  investigations.py  overview.py  queue_jobs.py  registry_promotion.py
model_service/: Dockerfile  README.md  pyproject.toml  train.py
model_service/app/: config.py  database.py  dependencies.py  drift.py  main.py  models.py  predict.py  registry.py  schemas.py
model_service/app/core/: config.py  db.py  dependencies.py
model_service/app/routers/: __init__.py  drift.py  health.py  predict.py  promotion.py  registry.py  replay_compare.py  replay_fixture.py  rollback.py
model_service/app/schemas/: __init__.py  drift.py  drift_webhook.py  health.py  predict.py  promotion.py  registry.py  replay_compare.py  replay_fixture.py  rollback.py
model_service/app/services/: __init__.py  agent_webhook_service.py  drift_service.py  prediction_service.py  promotion_service.py  registry_service.py  replay_service.py  rollback_service.py
model_service/training/: __init__.py  artifacts.py  config.py  data.py  io_utils.py  metrics.py  mlflow_registry.py  pipeline.py  runner.py
worker/: Dockerfile  README.md  pyproject.toml
worker/app/: main.py
worker/app/clients/: __init__.py  agent_client.py  model_service_client.py
worker/app/core/: config.py  db.py  deps.py  errors.py  logging.py
worker/app/jobs/: __init__.py  base.py  job_router.py  replay_test_job.py  retrain_job.py  rollback_job.py
worker/app/queue/: __init__.py  consumer.py  dlq.py  idempotency.py  producer.py  redis_client.py  retry.py
worker/app/repositories/: __init__.py  worker_job_repository.py
worker/app/schemas/: __init__.py  job.py  replay_test.py  retrain.py  rollback.py
worker/app/services/: __init__.py  job_log_service.py  job_service.py  (+2 more)
(+20 files in other folders)
