[project]
name = "drift-dashboard"
version = "0.1.0"
description = "Dashboard for drift monitoring and triage"
requires-python = ">=3.11,<3.12"

dependencies = [
    "streamlit==1.41.1",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "requests==2.32.3",
    "python-dotenv==1.0.1"
]

[tool.uv]
package = false
