[project]
name = "model-service"
version = "0.1.0"
description = "Model serving and drift detection service for Drift Triage Co-Pilot"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "scikit-learn==1.6.1",
    "joblib==1.4.2",
    "mlflow==2.19.0",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "redis==5.2.1",
    "rq==2.0.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[tool.uv]
package = false
